@@ -348,6 +348,7 @@ package DZT::TPW1;
 sub tmp}
 END
 
+
 my $tzil2 = Builder->from_config(
   { dist_root => 'corpus/dist/DZT' },
   {
@@ -403,13 +404,32 @@ my $tzil4 = Builder->from_config(
   },
 );
 $tzil4->plugins->[1]->{die_on_line_insertion} = 1;
-$tzil4->plugins->[1]->{use_our} = 1;
+$tzil4->plugins->[1]->{version_format} = 'our_with_braces';
 $tzil4->build;
 
 like(
   $tzil4->slurp_file('build/lib/DZT/Sample.pm'),
   qr{^\{ our \$VERSION = '0\.001'; \}$}m,
   "added 'our' version with braces to DZT::Sample",
+);
+
+
+my $tzil5 = Builder->from_config(
+  { dist_root => 'corpus/dist/DZT' },
+  {
+    add_files => {
+      'source/dist.ini' => simple_ini('GatherDir', 'PkgVersion'),
+    },
+  },
+);
+$tzil5->plugins->[1]->{die_on_line_insertion} = 1;
+$tzil5->plugins->[1]->{version_format} = 'our_without_braces';
+$tzil5->build;
+
+like(
+  $tzil5->slurp_file('build/lib/DZT/Sample.pm'),
+  qr{^our \$VERSION = '0\.001';$}m,
+  "added 'our' version without braces to DZT::Sample",
 );
 
 done_testing;
